# trunk-recorder

./: .clang-format  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  ChanList.csv  Dockerfile  README.md  STATUS-JSON.md  analog_recorder.cc  analog_recorder.h  audioplayer-v2.php  audioplayer.php  blacklist-rtl.conf  call.cc  call.h  clean.sh  cmake.h  cmake.h.in  config-dcfd-rtl.json  config-hackrf.json  config-multi-rtl.json.sample  config-multi-system.json  config-real-wmata-rtl.json  config-smartnet.json  config-uhd.json.sample  config-wmata-hackrf.json  config-wmata-rtl.json  config-wmata.json  config.h  config.json  dc-config.json  dc-one-rtl.json  debug-encode-upload.sh.sample  debug.grc  debug_analog.grc  debug_grc.py  (+59 more)
.github/: FUNDING.yml
.github/workflows/: clang-tidy-review.yml  codeql-analysis.yml  main.yml  msvc-analysis.yml
cmake/Modules/: FindGRPC.cmake  FindGnuradioAudio.cmake  FindGnuradioCore.cmake  FindGnuradioFCD.cmake  FindGnuradioIQBalance.cmake  FindGnuradioOsmosdr.cmake  FindGnuradioRuntime.cmake  FindGnuradioUHD.cmake  FindGrOsmoSDR.cmake  FindLame.cmake  FindLibDSD.cmake  FindLibHackRF.cmake  FindLibMiriSDR.cmake  FindLibOP25.cmake  FindLibOP25Repeater.cmake  FindLibOsmoSDR.cmake  FindLibRTLSDR.cmake  FindLibUHD.cmake  FindLibbladeRF.cmake  FindOP25.cmake  FindProtobuf.cmake
docs/: CONFIGURE.md  DEBUG.md  FAQ.md  INSTALL-DOCKER.md  INSTALL-LINUX.md  INSTALL-MAC.md  INSTALL-PI.md  OpenMHz.md  Playback.md  Plugins.md  SQUELCH.md  SigMF.MD  intro.md
docs/Install/: INSTALL-DOCKER.md  INSTALL-LINUX.md  INSTALL-MAC.md  INSTALL-PI.md  _category_.json
docs/notes/: CALL-HANDLING.md  PLUGIN-SYSTEM.md  STATES.md
examples/: JSON2calllog.php  JSON2dailylog.php  SETUP_SERVICE.md  auto-restart-wmata.sh  auto-restart.sh  channel.csv  config-conv-tg-csv.json  config-dcfd-hackrf.json  config-dcfd-rtl.json  config-dcfd-uhd.json  config-dmr.json  config-frs-single.json  config-frs.json  config-iq-file.json  config-multi-system.json  config-park-conv.json  config-smartnet-rtl.json  config-wmata-hackrf.json  config-wmata-rtl.json  conv-tg.csv  decodechart.php  encode-upload.sh.sample  frs.csv  live.calls.php  live.config.php  live.php  park-conv.csv  talkgroups.csv  trunk-recorder.service  unit-script.sh  upload_gcs.sh  wmata.csv
gr_blocks/: agc_impl.cpp  latency_api.h  latency_probe.cc  latency_probe.h  latency_tagger.cc  latency_tagger.h  nonstop_wavfile_sink.h  nonstop_wavfile_sink_impl.cc  nonstop_wavfile_sink_impl.h  rx_agc_cc.cpp  rx_agc_cc.h  rx_agc_ff.cpp  rx_agc_ff.h  rx_demod_fm.cpp
lfsr/: bit_utils.h  lfsr.h
lib/: json.hpp  retry_client_endpoint.hpp
lib/csv-parser/: csv.hpp
lib/gr-latency/: latency_probe.cc  latency_probe.h  latency_tagger.cc  latency_tagger.h
lib/gr-osmosdr/: airspy_source_c.cc.patch
lib/gr_blocks/: decoder_wrapper.h  decoder_wrapper_impl.cc  decoder_wrapper_impl.h  freq_xlating_fft_filter.h  iq_tcp_sink.h  iq_tcp_sink_impl.cc  iq_tcp_sink_impl.h  mp3_file_delayopen_sink_impl.cc  mp3_file_delayopen_sink_impl.h  mp3_file_sink.h  mp3_file_sink_impl.cc  plugin_wrapper.h  (+20 more)
lib/op25_repeater/include/op25_repeater/: CMakeLists.txt  ambe_encoder_sb.h  analog_udp.h  api.h  costas_loop_cc.h  dmr_bs_tx_bb.h  dstar_tx_sb.h  frame_assembler.h  fsk4_demod_ff.h  fsk4_slicer_fb.h  gardner_cc.h  gardner_costas_cc.h  iqfile_source.h  p25_frame_assembler.h  p25_frame_audio.h  rmsagc_ff.h  rx_status.h  vocoder.h  ysf_tx_sb.h
lib/op25_repeater/lib/: BER.cc  CCITTChecksumReverse.cpp  CCITTChecksumReverse.h  CMakeLists.txt  ambe.c  ambe.h  ambe_encoder.cc  ambe_encoder.h  ambe_encoder_sb_impl.cc  ambe_encoder_sb_impl.h  analog_udp_impl.cc  analog_udp_impl.h  bch.cc  ber1011.cc  bit_utils.h  bptc19696.cc  bptc19696.h  check_frame_sync.h  costas_loop_cc_impl.cc  costas_loop_cc_impl.h  crc16.h  d2460.cc  dmr_bs_tx_bb_impl.cc  dmr_bs_tx_bb_impl.h  dmr_cai.cc  dmr_cai.h  dmr_const.h  dmr_slot.cc  dmr_slot.h  dstar_header.h  dstar_tx_sb_impl.cc  dstar_tx_sb_impl.h  frame_assembler_impl.cc  frame_assembler_impl.h  frame_sync_magics.h  fsk4_demod_ff_impl.cc  fsk4_demod_ff_impl.h  fsk4_slicer_fb_impl.cc  fsk4_slicer_fb_impl.h  gardner_cc_impl.cc  (+72 more)
lib/op25_repeater/lib/ezpwd/: asserter  bch  bch_base  corrector  definitions  ezcod  output  rs  rs_base  serialize  serialize_definitions  timeofday
lib/op25_repeater/lib/imbe_vocoder/: CMakeLists.txt  CTestTestfile.cmake  aux_sub.cc  aux_sub.h  basic_op.h  basicop2.cc  ch_decode.cc  ch_decode.h  ch_encode.cc  ch_encode.h  dc_rmv.h  decode.cc  decode.h  dsp_sub.cc  dsp_sub.h  encode.h  globals.h  imbe.h  imbe_vocoder.cc  imbe_vocoder.h  math_sub.cc  math_sub.h  pe_lpf.h  pitch_est.cc  pitch_est.h  pitch_ref.h  qnt_sub.cc  qnt_sub.h  rand_gen.cc  rand_gen.h  sa_decode.h  sa_encode.cc  sa_encode.h  sa_enh.h  tbls.cc  tbls.h  typedef.h  typedefs.h  uv_synt.h  v_synt.cc  (+3 more)
notes/: PLUGIN-SYSTEM.md
op25_repeater/: CMakeLists.txt
plugins/rdioscanner_uploader/: CMakeLists.txt  rdioscanner_uploader.cc
plugins/stat_socket/: CMakeLists.txt  stat_socket.cc  stat_socket.h
plugins/unit_script/: CMakeLists.txt  unit-script.md  unit_script.cc
trunk-recorder/: bit_utils.py  call.cc  call.h  call_conventional.cc  call_conventional.h  call_impl.cc  call_impl.h  config.cc  config.h  csv_helper.cc  csv_helper.h  formatter.cc  formatter.h  global_structs.h  lfsr.py  main.cc  monitor_systems.cc  monitor_systems.h  recorder_globals.h  setup_systems.cc  setup_systems.h  source.cc  source.h  state.h  talkgroup.cc  talkgroup.h  talkgroups.cc  talkgroups.h  tsbk_socket.cc  tsbk_socket.h  unit_tag.cc  unit_tag.h  unit_tags.cc  unit_tags.h  uploader.cc  uploader.h  zmq_common.h
url_parser/: url_parser.cc  url_parser.h
user_plugins/: README.txt
utils/: Dockerfile.arch-latest-aur.dev  Dockerfile.arch-latest.dev  Dockerfile.debian-buster-10.dev  Dockerfile.fedora-35.dev  Dockerfile.ubuntu-20.04.dev  Dockerfile.ubuntu-21.04.dev  Dockerfile.ubuntu-22.04.dev  Dockerfile.ubuntu-23.04.dev  README.md  audioplayer.php  decodechart.php  rtlsdr-to-iq.c  udp-debug.grc
(+309 files in other folders)
